@@ -2,6 +2,7 @@ KAlarm Change Log
 
 === Version 2.10.3 --- 15 June 2013 ===
 - Fix sound repetition pause not working in audio alarms [KDE Bug 319261]
+- Fix Stop Play button being left enabled after closing alarm window.
 
 === Version 2.10.2 --- 4 May 2013 ===
 - [Akonadi] Fix infinite loop on shutdown if display alarms are active [KDE Bug 317806]
